# MarkReview

./: .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  ISSUES.md  MUTATION_REPORT.md  PRD.md  README.md  REVIEW.md  SECURITY.md  TASKS.md  mkdocs.yml  package.json  pnpm-lock.yaml  prd.md  pyproject.toml  stryker.conf.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.dev/: AGENTS.md  PRD.md  REVIEW.md  SECURITY.md  TRACEABILITY.md  VERIFICATION_REPORT.md
Docs/: DEV_GATE_REPORT.md
__tests__/: accessibilityAudit.test.ts  attach.test.ts  browserField.test.ts  bulkExport.test.ts  changeBars.test.ts  ciPipeline.test.ts  cleanupPythonSources.test.ts  comments.test.ts  criticParser.test.ts  diffDoc.test.ts  docsUpdate.test.ts  formatTracker.test.ts  index.test.ts  initLayout.test.ts  keymap.test.ts  legacyCleanup.test.ts  milkdown.test.ts  moveDevFiles.test.ts  performance.test.ts  persistence.test.ts  persistenceProsemirror.test.ts  popupWidget.test.ts  preferences.test.ts  releaseAlpha.test.ts  releaseGa.test.ts  reviewPanel.test.ts  securitySemver.test.ts  server.test.ts  stubsMigration.test.ts  tiptap.test.ts  toastui.test.ts  toolbar.test.ts  typesDirectory.test.ts  usabilityMetrics.test.ts  user.test.ts
docs/: PRD.md  README.md  TASKS.md  VERIFICATION_REPORT.md  accessibility.md  index.md  theming.md  tiptap.md  troubleshooting.md  usage.md  user-study.md
mkdocs_markreview/: __init__.py  obsidian.py  plugin.py
scripts/: next-agent.sh  performance-check.cjs  setup-dev.sh
src/: __init__.py  empty.ts  index.ts  stubs.py  styles.css
tests/: E2E_REPORT.md  test_accessibility_i18n.py  test_adapters.py  test_attach_api.py  test_bulk_export.py  test_change_bars.py  test_ci_pipeline.py  test_collaboration.py  test_comments.py  test_critic_parser.py  test_diff_doc.py  test_diff_performance.py  test_diff_service.py  test_docs_update.py  test_extension_registry.py  (+13 more)
(+72 files in other folders)
