[tool.poetry]
name = "markreview-monorepo"
version = "0.1.0"
description = "Development environment for MarkReview"
authors = ["Eric Putnam <team@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5"
pymdown-extensions = "^10"
mkdocs-material = "^9.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.7"
mypy = "^1.10"
pytest = "^8.2"
pytest-cov = "^5.0"
bandit = "^1.7"
pip-audit = "^2.7"
pre-commit = "^3.7"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
